tests/paczka1/small_fuzzy/34562126.err
Error in line 5: nrQB2 A657 32,2
Error in line 10: zmvqdBv S844 60,0
Error in line 11: nrQB2 A48 78,2
